--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "wdio-chromedriver-service": "^5.0.2"
   },
   "scripts": {
-    "elm-reactor": "elm reactor"
+    "elm-reactor": "elm reactor",
     "test": "wdio"
   },
   "author": "",
