--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ addons:
   firefox: "latest"
 
 before_script:
+  - npm run elm-make-all
   - npm run elm-reactor &
-  - sleep 10
 
 script: xvfb-run npm test
