--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "elm": "^0.19.1-3"
   },
   "scripts": {
+    "elm-make-all": "elm make src/*.elm --output=/dev/null",
     "elm-reactor": "elm reactor",
     "test": "wdio"
   },
